Move to tools deps and explicit script