@@ -1,9 +1,21 @@
 package dev.mccue.jproject;
 
 import dev.mccue.jproject.model.ApplicationModule;
+import dev.mccue.jproject.model.Basis;
+import org.apache.commons.io.FileUtils;
+import org.apache.commons.io.filefilter.FileFileFilter;
+import org.apache.commons.io.filefilter.SuffixFileFilter;
 
+import java.io.IOException;
+import java.lang.module.ModuleFinder;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.spi.ToolProvider;
+
+import static dev.mccue.jproject.Conventions.GOOGLE_JAVA_FORMAT_PATH;
+import static dev.mccue.jproject.Conventions.JUNIT_RUNNER_PATH;
 
 public final class Main {
 
@@ -15,9 +27,97 @@ public final class Main {
         }
     }
 
+    private static void runCommand(List<String> cmd) throws Exception {
+        System.out.println(cmd);
+        crashOn(
+                new ProcessBuilder(cmd)
+                        .inheritIO()
+                        .start()
+                        .waitFor()
+        );
+    }
+
+    private static void runTool(String tool, List<String> args) throws IOException, InterruptedException {
+        System.out.print(tool);
+        System.out.print(": ");
+        System.out.println(args);
+        crashOn(
+                ToolProvider.findFirst(tool)
+                        .orElseThrow()
+                        .run(System.out, System.err, args.toArray(new String[0]))
+        );
+    }
+
+    private static void clean() throws Exception {
+        FileUtils.deleteDirectory(Conventions.TARGET_DIR.toFile());
+    }
+
+    private static void compile(ApplicationModule project) throws Exception {
+        clean();
+        var javacArgs = new ArrayList<>(List.of(
+                "-g", // Generates debug symbols. Should always do this
+                "-Xlint:all",
+                "--module-path", Basis.builder()
+                        .addDependencies(project.compileDependencies())
+                        .build()
+                        .path(),
+                "-d", Conventions.CLASSES_DIR.toString()
+        ));
+
+        FileUtils
+                .listFiles(Conventions.SRC_DIR.toFile(), new String[] { "java" }, true)
+                .forEach(sourceFile -> javacArgs.add(sourceFile.toString()));
+
+        runTool(
+                "javac",
+                javacArgs
+        );
+
+        FileUtils.copyDirectory(
+                Conventions.SRC_DIR.toFile(),
+                Conventions.CLASSES_DIR.toFile(),
+                FileFileFilter.INSTANCE.and(new SuffixFileFilter(".java").negate())
+        );
+
+        Conventions.JAR_DIR.toFile().mkdirs();
+        runTool(
+                "jar",
+                List.of(
+                        "--create",
+                        "--file",
+                        Path.of(Conventions.JAR_DIR.toString(), "app.jar").toString(),
+                        "--main-class",
+                        project.mainClass(),
+                        "-C",
+                        Conventions.CLASSES_DIR.toString(),
+                        "."
+                )
+        );
+    }
+
+    private static void compileTest(ApplicationModule project) throws Exception {
+        var javacArgs = new ArrayList<>(List.of(
+                "-g", // Generates debug symbols. Should always do this
+                "-Xlint:all",
+                "--module-path", Basis.builder()
+                        .addDependencies(project.testCompileDependencies())
+                        .build()
+                        .path(),
+                "-d", Conventions.TEST_CLASSES_DIR.toString()
+        ));
+
+        FileUtils
+                .listFiles(Conventions.TEST_DIR.toFile(), new String[] { "java" }, true)
+                .forEach(sourceFile -> javacArgs.add(sourceFile.toString()));
+
+        runTool(
+                "javac",
+                javacArgs
+        );
+    }
+
     public static void main(String[] args) throws Exception {
         Setup.setUp();
-
         // Try to find jproject.toml
         if (!Files.exists(Conventions.JPROJECT_TOML_PATH)) {
             System.err.println("could not find jproject.toml");
@@ -30,24 +130,6 @@ public final class Main {
                 Conventions.JPROJECT_TOML_PATH
         );
 
-        // Clean up evidence of previous runs
-        Files.deleteIfExists(Path.of("build.xml"));
-        Files.deleteIfExists(Path.of("ivy.xml"));
-
-        var buildXml = Path.of("build.xml");
-        Files.writeString(buildXml, BuildXml.contents(project));
-
-        var ivyXml = Path.of("ivy.xml");
-        Files.writeString(ivyXml, IvyXml.contents(project));
-
-        var antExeStr = Path.of(
-                Conventions.ANT_DIRECTORY.toString(),
-                "apache-ant-1.10.11",
-                "bin",
-                "ant"
-        ).toString();
-
-
         if (args.length == 0) {
             System.out.println(Messages.USAGE);
         }
@@ -55,58 +137,108 @@ public final class Main {
             var subcommand = args[0];
             switch (subcommand) {
                 // Create a new project
-                case "new":
-                    break;
+                case "new" -> {}
+
+                // Formats code
+                case "fmt" -> {
+                    runCommand(List.of(
+                            "java",
+                            "-jar",
+                            GOOGLE_JAVA_FORMAT_PATH.toString(),
+                            "-r"
+                    ));
+                }
                 // Clean all cached resources
-                case "clean":
-                    crashOn(new ProcessBuilder(antExeStr, "clean")
-                            .inheritIO()
-                            .start()
-                            .waitFor());
-                    break;
+                case "clean" -> {
+                    clean();
+                }
                 // Compile all modules
-                case "compile":
-                    crashOn(new ProcessBuilder(antExeStr, "compile")
-                            .inheritIO()
-                            .start()
-                            .waitFor());
-                    break;
+                case "compile" -> {
+                    compile(project);
+                }
                 // Run the project
-                case "r":
-                case "run":
-                    crashOn(new ProcessBuilder(antExeStr, "run")
-                            .inheritIO()
-                            .start()
-                            .waitFor());
-                    System.out.println("run");
-                    break;
+
+                case "run" -> {
+                    compile(project);
+
+                    var moduleName = List.copyOf(ModuleFinder.of(Conventions.JAR_DIR).findAll())
+                            .get(0)
+                            .descriptor()
+                            .name();
+
+                    runCommand(List.of(
+                            "java",
+                            "--module-path",
+                            Basis.builder()
+                                    .addPath(Conventions.JAR_DIR)
+                                    .addDependencies(project.runtimeDependencies())
+                                    .build()
+                                    .path(),
+                            "--module",
+                            moduleName
+                    ));
+                }
+
                 // Run tests with junit
-                case "t":
-                case "test":
+                case "test" -> {
+                    compile(project);
+
+                    compileTest(project);
+                    var moduleName = List.copyOf(ModuleFinder.of(Conventions.JAR_DIR).findAll())
+                            .get(0)
+                            .descriptor()
+                            .name();
+
+                    runCommand(List.of(
+                            "java",
+                            "--patch-module", moduleName + "=" + Conventions.TEST_CLASSES_DIR,
+                            "--add-reads", moduleName + "=ALL-UNNAMED",
+                            "--add-opens", moduleName + "/" + moduleName + "=ALL-UNNAMED",
+                            "--module-path",
+                            Basis.builder()
+                                    .addPath(Conventions.JAR_DIR)
+                                    .addPath(Conventions.TEST_CLASSES_DIR)
+                                    .addDependencies(project.testRuntimeDependencies())
+                                    .build()
+                                    .path(),
+                            "-jar",
+                            JUNIT_RUNNER_PATH.toString(),
+                            "--select-modules"
+                    ));
                     System.out.println("test");
-                    break;
+                }
                 // Generate docs with javadoc
-                case "doc":
-                    System.err.println("doc: NOT YET IMPLEMENTED");
-                    System.exit(1);
+                case "doc" -> {
+                    runTool(
+                            "javadoc",
+                            List.of(
+                                "-d",
+                                "target/doc",
+                                "--module-path", Basis.builder()
+                                        .addDependencies(project.compileDependencies())
+                                        .build()
+                                        .path(),
+                                "--source-path", "src",
+                                "dev.mccue.example"
+                            )
+                    );
+                }
+
                 // Run benchmarks with JMH
-                case "bench":
+                case "bench" -> {
                     System.err.println("bench: NOT YET IMPLEMENTED");
                     System.exit(1);
+                }
                 // Publish a library to maven central
-                case "publish":
+                case "publish" -> {
                     System.err.println("publish: NOT YET IMPLEMENTED");
                     System.exit(1);
+                }
                 // Print out the tree of dependencies
-                case "tree":
-                    crashOn(new ProcessBuilder(antExeStr, "tree")
-                            .inheritIO()
-                            .start()
-                            .waitFor());
+                case "tree" -> {}
+
             }
         }
 
-        Files.delete(ivyXml);
-        Files.delete(buildXml);
     }
 }
